sfdx-source/main/default/objects/PC_Case__c/fields/Assigned_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Specialist</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Specialty__c</field>
            <operation>equals</operation>
            <valueField>ServiceResource.PC_Assigned_Specialty__c</valueField>
        </filterItems>
        <filterItems>
            <field>ServiceResource.PC_Online__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage
        >If you cannot find the specialist you are looking for, they may be offline. Please verify that they are signed into Omni Channel before attempting to forward them the
            case.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Provider Connect Cases</relationshipLabel>
    <relationshipName>Provider_Connect_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>