sfdx-source/main/default/objects/PC_Case__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
                <label>Teams Video</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Phone Callback</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>