sfdx-source/main/default/objects/PC_Case__c/fields/Data_Migration_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Migration Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>