sfdx-source/main/default/objects/PC_Case__c/fields/FLP_Location__c.field-meta.xml
<CustomField>
    <fullName>FLP_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track the location of the FLP for a given Case record.</description>
    <label>FLP Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>PrC Cases</relationshipLabel>
    <relationshipName>PrC_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>