sfdx-source/main/default/objects/PC_Case__c/fields/Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Opened_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time Opened</label>
    <type>DateTime</type>
</CustomField>