sfdx-source/main/default/objects/PC_Case__c/fields/PC_General_Question__c.field-meta.xml
<CustomField>
    <fullName>PC_General_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows FLP&apos;s to open General Questions to specialists within the PrC Application.</description>
    <inlineHelpText>General questions do not require a patient record to answer and are for common specialty specific information only.</inlineHelpText>
    <label>General Question</label>
    <type>Checkbox</type>
</CustomField>