sfdx-source/main/default/objects/PC_Case__c/fields/PC_Has_Patient_Account__c.field-meta.xml
<CustomField>
    <fullName>PC_Has_Patient_Account__c</fullName>
    <description>True if the PrC Case has a related Patient Account. Used to conditionally render the Add Patient component on the PrC Case page</description>
    <formula>NOT ( ISBLANK( Patient_Account__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Patient Account</label>
    <type>Checkbox</type>
</CustomField>