sfdx-source/main/default/objects/PC_Case__c/fields/PC_Has_Standard_Case__c.field-meta.xml
<CustomField>
    <fullName>PC_Has_Standard_Case__c</fullName>
    <description>Used to identify if the standard Case lookup is populated or not. Used for Visibility settings elsewhere.</description>
    <formula>!ISBLANK(PC_Standard_Case__c)</formula>
    <label>Has Standard Case</label>
    <type>Checkbox</type>
</CustomField>