sfdx-source/main/default/objects/PC_Case__c/fields/PC_Standard_Case__c.field-meta.xml
<CustomField>
    <fullName>PC_Standard_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Standard Case to make the relation after a Progress Note is created. Also used for button visibility settings.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>PrC Cases</relationshipLabel>
    <relationshipName>PrC_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>