sfdx-source/main/default/objects/PC_Case__c/fields/PCP_Division__c.field-meta.xml
<CustomField>
    <fullName>PCP_Division__c</fullName>
    <description>Returns the division field from the user record of the user who created the case.</description>
    <formula>CreatedBy.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FLP Division</label>
    <type>Text</type>
</CustomField>