sfdx-source/main/default/objects/PC_Case__c/fields/Specialist__c.field-meta.xml
<CustomField>
    <fullName>Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specialist who is currently working the case.</description>
    <label>Assigned Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Provider_Connect_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>