sfdx-source/main/default/objects/PC_Case__c/fields/Specialist_Division__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Division__c</fullName>
    <description>Returns the division field of the user record of the specialist assigned to the case.</description>
    <formula>Specialist__r.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialist Division</label>
    <type>Text</type>
</CustomField>