sfdx-source/main/default/objects/PC_Case__c/fields/Specialist_Location__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to track the location of the Specialist for a given Case record.</description>
    <label>Specialist Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>PrC Cases (Specialist Location)</relationshipLabel>
    <relationshipName>PrC_Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>