sfdx-source/main/default/objects/PC_Case__c/fields/Specialist_Notes__c.field-meta.xml
<CustomField>
    <fullName>Specialist_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specialist Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>