sfdx-source/main/default/objects/PC_Case__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>This is equivalent to the regular subject field on Case</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is equivalent to the regular subject field on Case</inlineHelpText>
    <label>Subject</label>
    <length>254</length>
    <type>Text</type>
</CustomField>