sfdx-source/main/default/objects/PC_Case__c/fields/Time_of_first_response__c.field-meta.xml
<CustomField>
    <fullName>Time_of_first_response__c</fullName>
    <description>The date/time when the specialist first responded in a chat</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Time of first response</label>
    <type>DateTime</type>
</CustomField>