sfdx-source/main/default/objects/PC_Case__c/recordTypes/Provider_Connect_Case.recordType-meta.xml
<RecordType>
    <fullName>Provider_Connect_Case</fullName>
    <active>true</active>
    <label>Provider Connect Case</label>
</RecordType>