sfdx-source/main/default/objects/PC_Case__c/validationRules/Enforce_no_edit_closed_case.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_no_edit_closed_case</fullName>
    <active>true</active>
    <description>Prevents closed cases from being edited, except in the case of populating the survey created field.</description>
    <errorConditionFormula>AND(
					!$Permission.DisableTriggersFlag, !$Permission.Bypass_Enforce_no_edit_closed_case_Validation_Rule ,
					Closed__c = TRUE,
					NOW() &gt;= Closed_Date__c + 3*(1/24/60/60),
				 ISCHANGED( Closed_Date__c ) = FALSE,
     PRIORVALUE(Closed__c)= TRUE
   )</errorConditionFormula>
    <errorMessage>Closed cases may not be edited.</errorMessage>
</ValidationRule>