sfdx-source/main/default/objects/PC_Case__c/validationRules/Enforce_PCP_Cannot_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_PCP_Cannot_Change_Owner</fullName>
    <active>false</active>
    <description>Prevents users without Specialist permission set from changing the Owner field.</description>
    <errorConditionFormula>!$Permission.DisableTriggersFlag &amp;&amp; $Permission.PC_Specialist = FALSE &amp;&amp; ISCHANGED( Assigned_Specialist__c )</errorConditionFormula>
    <errorMessage>Only specialists may edit this field.</errorMessage>
</ValidationRule>