sfdx-source/main/default/objects/PC_Case__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <columns>Patient_Account__c</columns>
    <columns>PCP__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Training_Case__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Provider Connect Cases</label>
</ListView>