sfdx-source/main/default/objects/PC_Case__c/listViews/PC_Open_Cases.listView-meta.xml
<ListView>
    <fullName>PC_Open_Cases</fullName>
    <columns>NAME</columns>
    <columns>PCP__c</columns>
    <columns>Specialist__c</columns>
    <columns>Specialty__c</columns>
    <columns>Channel__c</columns>
    <columns>Opened_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Training_Case__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Open Cases</label>
</ListView>