sfdx-source/main/default/objects/PC_Case__c/listViews/PC_Training_Cases.listView-meta.xml
<ListView>
    <fullName>PC_Training_Cases</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>PCP__c</columns>
    <columns>Specialist__c</columns>
    <columns>Channel__c</columns>
    <columns>Specialty__c</columns>
    <columns>Opened_Date__c</columns>
    <columns>Closed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Training_Case__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Training Cases</label>
</ListView>